--- a/prototype/package.json
+++ b/prototype/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "rich-textarea": "^0.26.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
